--- a/代码类/WEB用户前端/WEB学生前端/www/index.html
+++ b/代码类/WEB用户前端/WEB学生前端/www/index.html
@@ -29,12 +29,12 @@
 			
 			a:link {
 				text-decoration: none;
-				color: #000000;
+				color: #333333;
 			}
 			
 			a:visited {
 				text-decoration: none;
-				color: #000000;
+				color: #333333;
 			}
 			
 			a:hover {
@@ -55,15 +55,12 @@
             	时间：2018-04-14
             	描述：头部
             -->
-			<div id="head" style="width:100%;height:50px;background-color:#000000;">
-				<div id="logo" style="padding-top:10px;padding-left:30px;width:1200px;">
-					<img style="" src="img/logo.png" />
-					<span style="color:#FFFFFF;">云智教育</span>
-					<input type="text" placeholder="" style="border: 1px solid #DBDBDB;border-radius:5px;height:20px;" />
-					<input type="submit" style="border: 1px solid #DBDBDB;border-radius:1px;height:20px;" />
-
-					<a href="organization.html" style="margin-left:10px;float:right;color:#FFFFFF;">登录</a>
-					<a href="#" style="color:#FFFFFF;float: right;">注册</a>
+			<div id="head" style="width:100%;height:50px;background-color:#333333;">
+				<div id="logo" style="padding-left:30px;width:100%;padding-right:30px;">
+					<img style="width:50px;height:35px;" src="img/logo.png" />
+					<span style="color:#FFFFFF;line-height:50px;margin-left:20px;font-size:16px;">云智教育</span>
+					<a href="organization.html" style="float:right;color:#FFFFFF;line-height:50px;">登录</a>
+					<a href="#" style="color:#FFFFFF;float: right;line-height:50px;margin-right:20px;">注册</a>
 				</div>
 			</div>
 			<!--
@@ -71,9 +68,9 @@
             	时间：2018-04-14
             	描述：轮播图
             -->
-			<div id="banner" style="width:100%;height:420px;margin-bottom:200px;">
+			<div id="banner" style="width:100%;height:420px;margin-bottom:150px;">
 				<iframe src="banner1.html" style="width:100%;height:100%;"></iframe>
-				<div class="default_nav clearfix" style="margin-top:100px;text-align:center;">
+				<div class="default_nav clearfix" style="margin-top:50px;text-align:center;">
 					<h1>平台最新资讯</h1>
 				</div>
 			</div>
@@ -83,17 +80,16 @@
             	时间：2018-04-14
             	描述：资讯
             -->
-			<div id="information" style="width:100%;height:600px;">
+			<div id="information" style="width:100%;">
 				<div id="infor1" style="background-color:#F7F7F7;width:80%;height:100px;margin-top:10px;margin-left:10%;">
 					<img id="img" style="width:160px;height:90;padding:10px;" src="http://www.fstechnology.cn:8080/YZEduFileServer/
 							showImg?myfile=57077a1200013d0206000338-240-135.jpg" />
 					<div id="title2" style="margin-left:30px;width: 80%;float:left;height: 100px;margin-top: 5px;">
 						“云智教育”平台定位为一个通过互联网将院校/机构、课程资源、学生、教师关联起来的教育平台。 不同与其他在线教育平台，
-						它可以提供最新的科学学习方法和个性化学习体验，面向更广的用户群体， 拥有更为丰富的课程体系和授课模式，使得教育可以随时、随地、分享、共享， 
-						也将成为新的经济时代下互联网教育的最佳实践。
+						它可以提供最新的科学学习方法和个性化学习体验，面向更广的用户群体， 拥有更为丰富的课程体系和授课模式，使得教育可以随时、随地、分享、共享，也将成为新的经济时代下互联网教育的最佳实践。
 
 					</div>
-					<div id="time2" style="line-height:100px;float:right;margin-left: 80px;">
+					<div id="time2" style="line-height:100px;float:right;margin-left: 80px;padding-right:30px;">
 						2018/4/16
 					</div>
 				</div>
@@ -107,7 +103,7 @@
 						我们应该都知道， 大数据主要的问题就是大数据的存储与计算问题。作为能够对大量数据进行分布式处理的 软件框架——hadoop目前已经发展成为分析大数据的领先平台，
 						它能够以一种可靠、高效、可伸缩的方式进行数据处理。
 					</div>
-					<div id="time2" style="line-height:100px;float:right;margin-left: 80px;">
+					<div id="time2" style="line-height:100px;float:right;margin-left: 80px;padding-right:30px;">
 						2018/4/16
 					</div>
 				</div>
@@ -120,7 +116,7 @@
 						前几天，按照OpenStack版本的更新惯例，最新版本的OpenStack Queens又和大众见面了。相应的，stackalytics.com网站提供的社区贡献统计排名也新鲜出炉。
 						在Queens代码贡献中，榜单选取了目前业内公认的最能体现社区贡献含金量的指标——Commits（提交代码次数）、Completed Blueprints（完成蓝图数）、Resolved Bugs（修复缺陷数）、Reviews（代码审阅数）等共四项指标进行对比分析。
 					</div>
-					<div id="time2" style="line-height:100px;float:right;margin-left: 80px;">
+					<div id="time2" style="line-height:100px;float:right;margin-left: 80px;padding-right:30px;">
 						2018/4/16
 					</div>
 				</div>
@@ -133,7 +129,7 @@
 						应用程序可以可以来自许多来源 —— 几乎不可能数的清，并且每个开发团队都可以以他们认为最好的方式提供软件。
 						知道如何安装你所得到的软件是成为操作系统高级用户的一部分。
 					</div>
-					<div id="time2" style="line-height:100px;float:right;margin-left: 80px;">
+					<div id="time2" style="line-height:100px;float:right;margin-left: 80px;padding-right:30px;">
 						2018/4/16
 					</div>
 				</div>
@@ -145,11 +141,11 @@
 						GNOME Shell 被发现存在内存泄露的问题，现在官方开发团队已确认导致这个问题的原因 —— 忘记进行垃圾回收……GNOME 称目前正在修复该问题。
 						“触发垃圾回收能够将 GNOME Shell 使用的内存量减少到正常水平”GNOME 开发者花了大约一周的时间来定位问题的根源，不过谢天谢地，内存泄漏的原因（看起来）已经确定。
 					</div>
-					<div id="time2" style="line-height:100px;float:right;margin-left: 80px;">
+					<div id="time2" style="line-height:100px;float:right;margin-left: 80px;padding-right:30px;">
 						2018/4/16
 					</div>
 				</div>
-				<div id="more_infor" style="border:1px solid #000000;width:80%;margin-top:10px;margin-left:10%;">
+				<div id="more_infor" style="border-top:1px solid #d0d0d0;width:80%;margin-top:10px;margin-left:10%;">
 					<a href="#" style="float:right;">更多资讯>></a>
 				</div>
 			</div>
@@ -158,7 +154,7 @@
             	时间：2018-04-14
             	描述：课程列表
             -->
-			<div id="list" style="width:100%;height:800px;">
+			<div id="list" style="width:90%;margin:auto;">
 				<div class="default_nav clearfix" style="margin-top:100px;text-align:center;">
 					<h1>丰富的课程体系</h1>
 				</div>
@@ -280,8 +276,8 @@
 						</div>
 					</div>
 				</div>
-				<div id="more_infor" style="border:1px solid #000000;width:90%;margin-top:10px;margin-left:5%;">
-					<a href="#" style="float:right;">更多资讯>></a>
+				<div id="more_infor" style="border-top:1px solid #d0d0d0;width:80%;margin-top:10px;margin-left:10%;">
+					<a href="#" style="float:right;">更多课程>></a>
 				</div>
 			</div>
 
@@ -290,33 +286,35 @@
             	时间：2018-04-14
             	描述：底部
             -->
-			<div id="bottom" style="background-color:#000000;width:100%;height:200px;margin-top:180px;">
+			<div id="bottom" style="background-color:#333333;width:100%;height:200px;margin-top:180px;">
 				
 				<div id="bottom_top">
 					<div style="padding-top:20px;margin-left:5%;">
-						<a style="color:#FFFFFF;" href="#">关于我们</a>&nbsp;&nbsp;
-						<a style="color:#FFFFFF;" href="#">使用帮助</a>&nbsp;&nbsp;
-						<a style="color:#FFFFFF;" href="#">加入我们</a>&nbsp;&nbsp;
-						<a style="color:#FFFFFF;" href="#">管理登录</a>&nbsp;&nbsp;
-						<a style="color:#FFFFFF;" href="#">问题反馈</a>&nbsp;
+						<a style="color:#FFFFFF;margin-right:15px;" href="#">关于我们</a>
+						<a style="color:#FFFFFF;margin-right:15px;" href="#">使用帮助</a>
+						<a style="color:#FFFFFF;margin-right:15px;" href="#">加入我们</a>
+						<a style="color:#FFFFFF;margin-right:15px;" href="#">管理登录</a>
+						<a style="color:#FFFFFF;margin-right:15px;" href="#">问题反馈</a>
 						<br />
 						<br />
 						<br />
-						<h6>Copyright &copy;云智教育2018</h6>
-						<h6>浙ICP备17047611号-1</h6>
+						<h6 style="color:#FFFFFF;">客服电话：400-888-8888</h6>
+						<h6 style="color:#FFFFFF;">网站：www.fstechnology.cn</h6>
+						<h6 style="color:#FFFFFF;">Copyright &copy;&nbsp;2018&nbsp;云智教育APP平台系统</h6>
+						<h6 style="color:#FFFFFF;">浙ICP备17047611号-1</h6>
 					</div>
 					<div id="QR_Code" style="margin-left:36%;margin-top:20px;">
 						<div style="text-align:center;margin-right:10px;">
 							<img style="width:120px;height:120px;" src="img/APP_Student.png" />
-							<h5><b>学生APP</b></h5>
+							<h5 style="color:#FFFFFF;"><b>学生端APP下载</b></h5>
 						</div>
 						<div style="text-align:center;margin-right:10px;">
 							<img style="width:120px;height:120px;" src="img/APP_Teacher.png" />
-							<h5><b>教师APP</b></h5>
+							<h5 style="color:#FFFFFF;"><b>教师端APP下载</b></h5>
 						</div>
 						<div style="text-align:center;margin-right:10px;">
 							<img style="width:120px;height:120px;" src="img/WeCha.jpeg" />
-							<h5><b>微信公众号</b></h5>
+							<h5 style="color:#FFFFFF;"><b>微信公众号</b></h5>
 						</div>
 					</div>
 				</div>
